do not create window pixmap for Deleted windows

related black window issues

BUG: 325939
FIXED-IN: 4.11.3